--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ gunicorn==20.0.4
 Pillow==7.1.2
 pip-tools==5.2.0
 pipenv==2018.11.26
+python-decouple==3.3
 psycopg2==2.8.5
 pytz==2020.1
 whitenoise==5.1.0
